# hse-tp-patterns

./: pyproject.toml
src/: closure1.py  closure2.py  closure3.py  coupling.py  dependency_injection.py  dependency_injection2.py  protocol1.py  protocol2.py  protocol3.py
